Added some AJAX.

--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -23,45 +23,60 @@
             </ul>
         </nav> 
         <div class="clear"></div>
-    </header>    
-    <div class="content">
-    <article class="underline">
-		<div class="post-preview">
-			<a href="basic_markup.html"><img src="http://lorempixel.com/48/48/nightlife/" alt="title of the image"/></a>
-		</div>
-		<div class="post-content">
-			<h2><a href="basic_markup.html">Post with title, preview, excerpt and date</a></h2>
-			<p>I wish! It's a nickel. Good man. Nixon's pro-war and pro-family. Hey, what kinda party is this? There's no booze and only one hooker.</p>
-			<div class="date"><span>20 mar 2012</span></div>
-		</div>
-		<div class="clear"></div>
-    </article>
-    <article class="underline">
-		<div class="post-preview">
-			<a href="basic_markup.html"><img src="http://lorempixel.com/48/48/nightlife/" alt="title of the image"/></a>
-		</div>
-		<div class="post-content">
-			<h2><a href="basic_markup.html">Post with title, preview and date</a></h2>
-			<div class="date"><span>20 mar 2012</span></div>
-		</div>
-		<div class="clear"></div>
-    </article>
-    <article class="underline">
-			<h2><a href="basic_markup.html">Post with title, banner, excerpt and date</a></h2>
-			<a href="basic_markup.html"><img src="http://lorempixel.com/240/160/nightlife/" alt="title of the image"/></a>
-			<p>I wish! It's a nickel. Good man. Nixon's pro-war and pro-family. Hey, what kinda party is this? There's no booze and only one hooker.</p>
-			<div class="date"><span>20 mar 2012</span></div>
-    </article>
-    <article class="underline">
-			<h2><a href="basic_markup.html">Post with title, excerpt and date</a></h2>
-			<p>I wish! It's a nickel. Good man. Nixon's pro-war and pro-family. Hey, what kinda party is this? There's no booze and only one hooker.</p>
-			<div class="date"><span>20 mar 2012</span></div>
-    </article>
-    <article class="underline">
-			<h2><a href="basic_markup.html">Post with title and date</a></h2>
-			<div class="date"><span>20 mar 2012</span></div>
-    </article>
-    </div>
+        <script src="static/js/jquery-1.9.0.js"></script>
+        <script src="static/js/script1.js"></script>
+    </header>
+
+<canvas id="canvas" style="display:block; border:1px solid #d3d3d3"></canvas>
+Введите название комнаты: <input type="text" id="txt"/> <input type="button" id="btn" value="Нарисовать план">
+
+<script>
+function someFunc(){
+    $.ajax({
+        url: '/home',
+        dataType: 'json',
+        data: document.getElementById("txt").value,
+        type: 'POST',
+        success: function(response){
+            //resize();
+            var c = document.getElementById("canvas");
+            var ctx = c.getContext("2d");
+            ctx.moveTo(0,0);
+            ctx.lineTo(200,100);
+            ctx.stroke();
+            
+            console.log(response);
+        },
+        error: function(error){
+            console.log(error);
+        }
+    });
+
+}
+
+document.getElementById("btn").onclick = someFunc;
+
+
+function resize() {
+    var canvas = document.getElementById('canvas'),
+            context = canvas.getContext('2d');
+
+    // resize the canvas to fill browser window dynamically
+    window.addEventListener('resize', resizeCanvas, false);
+
+    function resizeCanvas() {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+            drawStuff(); 
+    }
+    resizeCanvas();
+
+    function drawStuff() {
+            // do your drawing stuff here
+    }
+}
+</script>
+
     <footer>
         <p class="copy">&copy; 2012 yourdomainname.com | All right reserved &bull; Design By <a href="http://www.mobifreaks.com" title="Design By Mobifreaks.com">Mobifreaks.com</a></p>
     </footer>
