--- a/site/static/styles/style1.css
+++ b/site/static/styles/style1.css
@@ -1,27 +1,27 @@
 body {
-  font-family: Arial, sans-serif;
-  font-size: 10px;
-  line-height: 24px;
-  color: #000000;
-  padding:0px;
+	font-family: Arial, sans-serif;
+	font-size: 10px;
+	line-height: 24px;
+	color: #000000;
+	padding:0px;
 
   /*  Пример подключения изображения из папки  img */
- 
+
 }
 .header{
-background-color:#3493ad;
-width:100%;
-height:150px;
-margin:0px;
-padding:0px;
-left:0;
-top:0;
-position:absolute;
+	background-color:#3493ad;
+	width:100%;
+	height:150px;
+	margin:0px;
+	padding:0px;
+	left:0;
+	top:0;
+	position:absolute;
 }
 
 #footer{
-background-color:#3493ad;
- position: absolute;
+	background-color:#3493ad;
+	position: absolute;
 	margin-top: -100px; /* negative value of footer height */
 	height: 100px;
 	width:100%;
@@ -30,48 +30,36 @@ background-color:#3493ad;
 	left:0px;
 }
 #bodf{
-background:rgba(215,205,148,0.4);
-width:90%;
-height:1200px;
-margin:auto;
-margin-top:20px;
-margin-bottom:20px;
-padding:auto;
-border:solid 10px  rgba(247,246,243,0.4);
-position: relative; z-index: 1;
-min-width:900px;
+	background:rgba(215,205,148,0.4);
+	width:70%;
+	height:1200px;
+	margin:auto;
+	margin-top:20px;
+	margin-bottom:20px;
+	padding:auto;
+	border:solid 10px  rgba(247,246,243,0.4);
+	position: relative; z-index: 1;
+	min-width:900px;
 }
 .h1{
-font-size: 60px; 
-position: relative;  
-color: black; 
-text-align: right; 
-padding-right:30px;
-margin: 0 0 3em;
-font-weight:bold;
-text-align: right;
-padding-top:50px;
-padding-bottom:20px;
+	font-size: 60px; 
+	position: relative;  
+	color: black; 
+	text-align: right; 
+	padding-right:30px;
+	font-weight:bold;
+	text-align: right;
+	padding-bottom:20px;
 }
 .logo{
-float: left; 
-position: relative;
-width:200px; 
-padding:20px;
-margin: 0 0 3em;
-text-align: left;
-padding-left:40px;
-padding-top:25px;
-padding-bottom:0px;
+	float: left; 
+	position: relative;
+	width:200px; 
+	text-align: left;
+	padding-left:10px;
+	padding-top:10px;
+	padding-bottom:0px;
 }	
-
-h2{
-padding:20px;
-padding-top:35px;
-font-size:20px;
-padding-bottom:0px;
-
-}
 .bold{
 
 	font-size:17px;
@@ -80,64 +68,110 @@ li{
 	font-size:17px;
 	font-weight:normal;
 }
-
-
-p{  min-width:720px;
-	padding-top:60px;
-	font-size:17px;
-	font-weight:bold;
-    text-align:justify;
-	max-width:720px;
-	margin-left:35px;
-}
-h1{
-	padding:30px;
-    padding-top:70px;
-    font-size:23px;
-    padding-bottom:0px;
-}
-h3{
-font-size: 60px;  
-color: black; 
-text-align: center; 
-font-weight:bold;
-padding-top:50px;
-padding-bottom:20px;
-text-align: center;
-margin:auto;
-margin:auto;
+.h3{
+	margin:10px;
+	margin-top:20px;
+	font-size:23px;
+	padding-bottom:20px;
+	
 }
 .plan{
+	padding-top:10px;
 	background:#b0aebf;
-width:95%;
-height:500px;
-margin:auto;
-
-margin-bottom:20px;
-padding:auto;
-border:solid 10px  rgba(247,246,243,0.4);
-position: relative;
-z-index: 1;
+	width:95%;
+	height:500px;
+	margin:auto;
+	margin-bottom:20px;
+	padding:auto;
+	border:solid 10px  rgba(247,246,243,0.4);
+	position: relative;
+	z-index: 1;
 
 }
 table{
-     border-collapse: collapse;
-     width:60%;
-	 margin:auto;
-	 margin-bottom:20px;
-     padding:auto;
-	 font-size:20px;
+	border-collapse: collapse;
+	width:85%;
+	margin:auto;
+	margin-bottom:20px;
+	padding:auto;
+	font-size:20px;
 	
 }
-td {
-     border-bottom: 2px solid lightgray;
-     padding: 10px;
-	 font-size:16px;
-	  font-weight:bold;
-     }
+td{
+	padding: 10px;
+	font-size:16px;
+	font-weight:bold;
+}
 .room{
 	font-weight:normal;
 }
 .right{
-text-align: right;
+	text-align: right;
+}
+.h2{
+	padding:20px;
+	padding-top:35px;
+	font-size:30px;
+	padding-bottom:0px;
+	color:white;
+}
+.cap{
+	border-collapse: collapse;
+	width:95%;
+	margin:auto;
+	margin-bottom:20px;
+	padding:auto;
+	font-size:20px;
+}
+a{
+	color:black;
+}
+.user{
+	color:white;
+}
+.h4{
+	color:#3493ad;
+}
+input[type=range]{
+-webkit-appearance: none;
+}
+input[type=range]::-webkit-slider-runnable-track{
+	border-radius: 10px;
+	height: 10px;
+	border: 1px solid #000;
+	background-color: #ccc;
+}
+input[type=range]::-webkit-slider-thumb{
+	-webkit-appearance: none;
+	background-color: #000;
+	border: 3px solid #0b6b00;
+	width: 20px;
+	height: 20px;
+	border-radius: 10px;
+	cursor: pointer;
+	margin-top: -5px;
+}
+.outputesize{
+	font-size:23px;
+}
+b{
+font-size:25px;	
+}
+#floor_s{
+	font-size:20px;
+	font-style:bold;
+}
+#room_s{
+	font-size:20px;
+	font-style:bold;
+}
+.str{
+	width:60%;
+	height:50px;
+	margin:auto;
+}
+tr{
+	margin-left: auto;
+    margin-right: auto;
+	text-align: center;
 }
